Temp fix for horizontal scroll on Nexus 9

--- a/MABMoney.Web/Content/Css/styles.less
+++ b/MABMoney.Web/Content/Css/styles.less
@@ -163,6 +163,22 @@ form {
     }
 }
 
+@media (min-width: 768px) {
+  .container {
+    width: 710px;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+    width: 970px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
+}
+
 @media (min-width: 768px) and (max-width: 979px) {
 
     .nav-tabs {
@@ -171,12 +187,13 @@ form {
                 span {
                     display: none;
                 }
-
             }
         }
     }
 
 }
+
+
 
 @media (max-width: 767px) {
 
